                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 26-02-2005 fixed: DVDImage/Folder playback could fail on remote drives (smb,ccx..) if password set with new player
  - 25-02-2005 fixed: My Music view resets to file view on restart if it was set to navigator view.
  - 25-02-2005 fixed: Stack overflow in ActivateWindow if it's called with an invalid window from a windows OnInit message handler.
  - 24-02-2005 added: My Music iPod-style Navigator. (Initial commit. Support for multiple artists and genres coming SOON!)
  - 24-02-2005 fixed: Timing Issues: Printing XBE Title To LCD On Launch
  - 24-02-2005 fixed: Some long-lined vobsubs were not displayed. Fixed in alternate mplayer only.
  - 24-02-2005 changed: Delay audio output until video is ready to play
  - 24-02-2005 fixed: [ 1093336 ] MusicInfoTagLoaderWMA.cpp string conversion resulted in double length strings
  - 23-02-2005 changed: Get available subtitle fonts and sizes from alternate mplayer path if alternate mplayer is enabled
  - 23-02-2005 updated: Polish language file (Thnx to napek)
  - 23-02-2005 updated: Norwegian language file (Thnx to vnm)
  - 23-02-2005 updated: Italian language file (Thnx to kotix)
  - 23-02-2005 updated: German (Austrian) language file (Thnx to CEOMR)
  - 23-02-2005 updated: Finnish language file (Thnx to jutski)
  - 23-02-2005 fixed: Switching from Fullscreen Video -> GUI now looks more professional (blank screen rather than stalled/mangled video)
  - 23-02-2005 added: [ 1149558 ] Printing XBE Title To LCD On Launch.  Thanks sniperkilla!
  - 22-02-2005 fixed: Crash when Kai is re-entered after a skin/font/etc. change.